fix stretching issue

--- a/style.css
+++ b/style.css
@@ -9,6 +9,5 @@ body {
 
 #game-board {
   background-color: lightgrey;
-  width: 500px;
-  height: 500px;
+
 }
